client/src/index.css
/* Copied from https://github.com/twbs/bootstrap/pull/18775/files */
html {
  /*
   * IE11 & Edge make the scrollbar overlap the content and automatically hide itself when not in use.
   * Unfortunately, the auto-showing of the scrollbar is sometimes too sensitive,
   * thus making it hard to click on stuff near the right edge of the page.
   * So we add this style to force IE11 & Edge to use a "normal", non-overlapping, non-auto-hiding scrollbar.
   * See https://github.com/twbs/bootstrap/issues/18543
   */
  -ms-overflow-style: scrollbar;
}

body {
	font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
	background: #f2f2f2;
	overflow: hidden;
}

.anet {
	height:100vh;
}

h5 {
	text-decoration: underline;
}

.breadcrumb {
	background: #f9f9f9;
	margin-top: 10px;
}

button {
	z-index:2;
}

input[type=checkbox][readonly] {
	cursor: not-allowed;
}

fieldset {
	background: #fff;
	border: 1px solid #e0e0e0;
	padding: 1.25em;
	margin: 0;
	margin-bottom: 3rem;
	width: 100%;
}

.legend {
	float: left;
	width: 100%;
	color: #363636;
	border: none;
	font-weight: normal;
}

h2.legend {
	font-size: 2rem;
	margin-top: 1rem;
}

.legend small {
	float: right;
	font-size: 1.2rem;
	margin: 1rem 0.5rem 0 0;
}

.legend small .btn {
	margin-top: -2rem;
}

.legend small :not(.btn-group) .btn + .btn {
	margin-left: 1rem;
}

.form-top-submit {
	margin-bottom: 1rem;
}

fieldset .pagination {
	margin: 0;
}

fieldset .negative-bottom {
	margin-bottom: -20px;
}

fieldset .help-text {
	font-size: 12px;
	font-weight: bold;
	color: #888;
	text-transform: uppercase;
	letter-spacing: 1px;
	text-align: center;
	margin-bottom: 24px;
}

fieldset .chart-description {
	color: #777;
	text-align: left;
	padding-bottom: 8px;
	padding-left: 8px;
}

fieldset.collapsable {
	background: none;
	border: none;
}
fieldset.collapsable legend hr {
	border: 1px solid #e0e0e0;
	margin-top: 10px;
}
fieldset.collapsable legend div.collapsableToggle {
	margin-right: 5px;
}

fieldset.warning {
	border: 2px solid orange;
}

fieldset.danger {
	border: 2px solid red;
}

.input-group {
	width: 100%;
}

.form-control-icon {
	position: absolute;
	top: 4px;
	left: 0.5rem;
	height: 26px;
	z-index: 5;
	opacity: 0.5;
}

.react-autosuggest__container input {
	padding-left: 3.2rem;
}

.react-autosuggest__suggestions-list {
	max-height: 231px;
	overflow-y: scroll;
}

.shortcut-list {
	margin-top: -4px;
}

.shortcut-list h5 {
	margin: 3px 0 4px 0;
}

.shortcut-list .btn-link {
	text-align: left;
	white-space: initial;
	padding: 0;
}

.btn.btn-link {
	overflow: visible;
	width: 100%;
}

.btn-group .radio-inline, .btn-group-vertical .radio-inline {
	padding: 0;
	margin: 0;
}

.btn-group .radio-inline input, .btn-group-vertical .radio-inline input {
	display: none;
}

.dropdown-menu {
	overflow-y: auto;
	max-height: 400px;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
	background-color: #e0e0e0;
}

.nav > li > a:hover, .nav .open > a:focus {
	background-color: #e0e0e0;
}

.header .logo img, .header input, .header button {
	height: 38px;
}

.header button {
	font-weight: bold;
}

.header .row > div * {
	margin: 0;
}

.header small span {
	padding: 5px;
	text-decoration: underline;
	display: inline-block;
}

span.asLink {
	cursor: pointer;
	color: #337ab7;
}
span.asLink:hover,
span.asLink:focus {
	text-decoration: underline;
	color: #23527c;
}

.banner {
	color: #fff;
	width: 100%;
	font-size: 18px;
	text-align: center;
	z-index: 10;
}

#advanced-search.popover {
	width: 750px;
	max-width: none;
}

.graphiql-container {
	min-height: 600px;
}

.todo {
	background-color: red;
}

.home-tile-row {
	padding: 0;
}

.home-tile-row .container-fluid {
	padding: 0;
	display: block;
}

.home-tile-row .row {
	display: table;
	width: 100%;
	margin: 0;
}

.home-tile-row span.close-getting-started {
	position: relative;
	top: -10px;
	right: 5px;
	font-size: 1.2rem;
	float: right;
	cursor: pointer;
	opacity: .2;
	color: #000;
	text-shadow: 0 1px 0 #fff;
	font-weight: bold;
}

.home-tile-row span.close-getting-started:hover {
	opacity: .5;
	text-decoration: none;
}

button.home-tile.btn {
	display: table-cell;
	width: 20%;
	float: none;
	vertical-align: top;
	text-align: center;
	padding: 10px;
	color: #5c5c5c;
	text-decoration: none;
}
.home-tile h1 {
	font-weight: 900;
}

.home-tile:hover {
	background: #dae3ee;
}
.home-tile:hover, .home-tile:focus {
	text-decoration: none;
}

.person-icon, .position-icon {
	margin-right: 4px;
}

.primary-attendee .checkbox {
	padding: 0;
	margin: 0;
	text-align: center;
}

.loading .anet section {
	visibility: hidden;
}

.loading .anet section:before {
	content: "Loading...";
	visibility: visible;
	font-size: 2rem;
}

.nav img {
	width: 16px;
	margin-right: 6px;
}

.nav .nav > li > a {
	border-left: 4px solid rgba(0,0,0,0);
	padding: 4px 0 4px 38px;
	padding-right: 4px;
}

.nav .nav > li.active > a {
	border-left: 4px solid #1772B8;
}

li#search-nav .nav > li {
	border-left: none;
}

li#search-nav .nav > li a {
	padding-right: 4px;
}

.nav-fixed {
	flex:0 0 auto;
	padding:8px;
}

.nav-overlay {
	padding:8px;
	border: 1px solid #e0e0e0;
	height: 100%;
	position: absolute;
	background: #f2f2f2;
	left: 0;
	z-index: 9999;
	overflow-y:auto;
}

.report-sub-form .form-group {
	margin: 24px;
}

.report-sub-form textarea {
	width: 100%;
}

.report-sub-form .right-button {
	float: right;
	margin-right: 24px;
}

.report-sub-form button {
	margin-left: 24px;
}

.report-collection header {
	margin-bottom: 18px;
}

.report-collection footer {
	margin-top: 18px;
}

.report-summary {
	margin-top: 18px;
	padding-top: 18px;
	border-top: 1px solid #ccc;
}

.report-summary .row {
	margin-top: 3px;
}

.report-summary .engagement-date {
	margin-right: 10px;
	padding-left: 10px;
	padding-right: 10px;
}

.report-summary .people-separator {
	margin-left: 5px;
	color: #555;
	font-size: 1.4rem;
}

.report-summary h2 {
	font-size: 14px;
	font-weight: bold;
}
/* ... */

